Gate Scope 3 exports and insights

--- a/exports.html
+++ b/exports.html
@@ -263,6 +263,7 @@
               <button class="btn primary" id="exportScope3Csv">Generate Scope 3 CSV</button>
               <span class="status" id="scope3ExportStatus"></span>
             </div>
+            <p class="note" id="scope3ExportLock" style="display:none;">Upgrade to CarbonWise Complete to export Scope 3 data.</p>
             <p class="note">Scope 3 includes vendor-reported actuals and spend-based EIO screening; screening results are high-uncertainty.</p>
             <p class="note">Methodology: <a href="methodology.html#scope-3">See Scope 3 methodology</a>.</p>
           </section>
