--- a/records.html
+++ b/records.html
@@ -534,6 +534,7 @@
     const authNote = document.getElementById('records-auth-note');
     const scope3NavLink = document.querySelector('.nav-item[data-nav="scope3"]');
     const navBrand = document.querySelector('.nav-brand');
+    const mobileBrand = document.querySelector('.mobile-brand');
 
     const PLAN_LIMIT_MESSAGE = 'Free plan limit reached (5 records). Upgrade to add more.';
     const isPlanLimitError = (error) => {
@@ -833,10 +834,11 @@
     };
 
     const updateNavBrand = (companyName, tier) => {
-      if (!navBrand) return;
       const name = companyName || 'Your Company';
       const badge = tier ? ` (${formatTierLabel(tier)})` : '';
-      navBrand.textContent = `${name}${badge}`;
+      const label = `${name}${badge}`;
+      if (navBrand) navBrand.textContent = label;
+      if (mobileBrand) mobileBrand.textContent = label;
     };
 
     const updateScope3Nav = () => {
