--- a/insights.html
+++ b/insights.html
@@ -43,6 +43,9 @@
       z-index: 40;
     }
     .mobile-brand {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
       color: #e5e7eb;
       text-decoration: none;
       font-weight: 700;
@@ -69,7 +72,9 @@
     .shell { max-width: 1100px; margin: 0 auto; padding: 0 20px 60px; }
     .top-row { display: none; }
     .nav-brand {
-      display: inline-block;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
       padding: 6px 10px;
       background: #e0f2f1;
       color: #0f766e;
@@ -78,6 +83,16 @@
       font-size: 0.9rem;
       margin-bottom: 16px;
       text-decoration: none;
+    }
+    .brand-name { font-weight: 700; }
+    .brand-badge {
+      padding: 2px 8px;
+      border-radius: 999px;
+      background: rgba(34, 197, 94, 0.18);
+      border: 1px solid rgba(34, 197, 94, 0.4);
+      color: #166534;
+      font-size: 0.72rem;
+      font-weight: 700;
     }
     h1 { margin: 0 0 10px; font-size: clamp(28px, 4vw, 36px); letter-spacing: -0.01em; }
     p.muted { color: var(--muted); margin: 0 0 12px; }
@@ -178,12 +193,12 @@
 <body>
   <div class="app-layout">
     <div class="mobile-topbar">
-      <a class="mobile-brand" href="index.html">CarbonWise</a>
+      <a class="mobile-brand" href="index.html" aria-label="Company"></a>
       <button class="mobile-menu-btn" id="mobile-nav-toggle" type="button">Menu</button>
     </div>
     <div class="mobile-overlay" id="mobile-nav-overlay"></div>
     <aside class="side-nav">
-      <a class="nav-brand" href="index.html">CarbonWise</a>
+      <a class="nav-brand" href="index.html" aria-label="Company"></a>
       <nav class="nav-items">
         <a href="dashboard.html" class="nav-item" data-nav="dashboard">Dashboard</a>
         <a href="scope1.html" class="nav-item" data-nav="scope1">Scope 1 Records</a>
@@ -393,7 +408,6 @@
     const scope3NavLink = document.querySelector('.nav-item[data-nav=\"scope3\"]');
     const navBrand = document.querySelector('.nav-brand');
     const mobileBrand = document.querySelector('.mobile-brand');
-    const BRAND_CACHE_KEY = 'cw_brand_label';
 
     const setStatus = (msg) => { if (statusEl) statusEl.textContent = msg; };
 
@@ -405,39 +419,31 @@
       return tier === 'core' ? 'Core' : tier === 'complete' ? 'Complete' : 'Free';
     };
 
-    const setBrandLabel = (label) => {
-      if (navBrand) navBrand.textContent = label;
-      if (mobileBrand) mobileBrand.textContent = label;
-    };
-
-    const getCachedBrandLabel = () => {
-      try {
-        return localStorage.getItem(BRAND_CACHE_KEY);
-      } catch (err) {
-        return null;
-      }
-    };
-
-    const cacheBrandLabel = (label) => {
-      try {
-        localStorage.setItem(BRAND_CACHE_KEY, label);
-      } catch (err) {
-        // Ignore storage failures (privacy mode or restricted storage).
-      }
+    const setBrandLabel = (companyName, tier) => {
+      const badge = tier ? formatTierLabel(tier) : '';
+      const apply = (el) => {
+        if (!el) return;
+        el.textContent = '';
+        if (companyName) {
+          const nameEl = document.createElement('span');
+          nameEl.className = 'brand-name';
+          nameEl.textContent = companyName;
+          el.appendChild(nameEl);
+        }
+        if (badge) {
+          const badgeEl = document.createElement('span');
+          badgeEl.className = 'brand-badge';
+          badgeEl.textContent = badge;
+          el.appendChild(badgeEl);
+        }
+      };
+      apply(navBrand);
+      apply(mobileBrand);
     };
 
     const updateNavBrand = (companyName, tier) => {
-      const name = companyName || 'Your Company';
-      const badge = tier ? ` (${formatTierLabel(tier)})` : '';
-      const label = `${name}${badge}`;
-      setBrandLabel(label);
-      cacheBrandLabel(label);
+      setBrandLabel(companyName || '', tier);
     };
-
-    const cachedBrand = getCachedBrandLabel();
-    if (cachedBrand) {
-      setBrandLabel(cachedBrand);
-    }
 
     const loadRecords = () => {
       try {
