--- a/scope3.html
+++ b/scope3.html
@@ -69,6 +69,9 @@
       z-index: 40;
     }
     .mobile-brand {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
       color: #e5e7eb;
       text-decoration: none;
       font-weight: 700;
@@ -134,7 +137,9 @@
       margin: 0 0 18px;
     }
     .nav-brand {
-      display: inline-block;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
       padding: 6px 10px;
       background: #e0f2f1;
       color: #0f766e;
@@ -143,6 +148,16 @@
       font-size: 0.9rem;
       margin-bottom: 16px;
       text-decoration: none;
+    }
+    .brand-name { font-weight: 700; }
+    .brand-badge {
+      padding: 2px 8px;
+      border-radius: 999px;
+      background: rgba(34, 197, 94, 0.18);
+      border: 1px solid rgba(34, 197, 94, 0.4);
+      color: #166534;
+      font-size: 0.72rem;
+      font-weight: 700;
     }
     .pill {
       display: inline-flex;
@@ -319,12 +334,12 @@
 <body>
   <div class="app-layout">
     <div class="mobile-topbar">
-      <a class="mobile-brand" href="index.html">CarbonWise</a>
+      <a class="mobile-brand" href="index.html" aria-label="Company"></a>
       <button class="mobile-menu-btn" id="mobile-nav-toggle" type="button">Menu</button>
     </div>
     <div class="mobile-overlay" id="mobile-nav-overlay"></div>
     <aside class="side-nav">
-      <a class="nav-brand" href="index.html">CarbonWise</a>
+      <a class="nav-brand" href="index.html" aria-label="Company"></a>
       <nav class="nav-items">
         <a href="dashboard.html" class="nav-item" data-nav="dashboard">Dashboard</a>
         <a href="scope1.html" class="nav-item" data-nav="scope1">Scope 1 Records</a>
