Show plan badge when company present

--- a/settings.html
+++ b/settings.html
@@ -384,12 +384,14 @@
     };
 
     const formatTierLabel = (tier) => {
-      if (!tier) return '';
-      return tier === 'core' ? 'Core' : tier === 'complete' ? 'Complete' : 'Free';
+      const normalized = (tier || '').toLowerCase();
+      if (normalized === 'core') return 'Core';
+      if (normalized === 'complete') return 'Complete';
+      return 'Free';
     };
 
     const setBrandLabel = (companyName, tier) => {
-      const badge = tier ? formatTierLabel(tier) : '';
+      const badge = companyName ? formatTierLabel(tier) : '';
       const apply = (el) => {
         if (!el) return;
         el.textContent = '';
